# AgentDash

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  README.zh-CN.md  clippy.toml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
crates/agentdash-acp-meta/: .gitignore  Cargo.toml
crates/agentdash-acp-meta/src/: generate_ts.rs  lib.rs
crates/agentdash-agent/: Cargo.toml
crates/agentdash-agent-core/: Cargo.toml
crates/agentdash-agent-core/src/: agent.rs  event_stream.rs  explicit_model.rs  lib.rs  loop_engine.rs  model.rs
crates/agentdash-agent-core/tests/: loop_engine.rs  runtime_alignment.rs
crates/agentdash-agent-protocol/: Cargo.toml  protocol-codegen.lock.json
crates/agentdash-agent-protocol-codegen/: Cargo.toml
crates/agentdash-agent-protocol-codegen/src/: main.rs
crates/agentdash-agent-protocol/src/: approval.rs  backbone.rs  compat.rs  generate_ts.rs  lib.rs  presentation.rs  surface_presentation.rs  thread_item.rs  transcript_projection.rs
crates/agentdash-agent-runtime/: Cargo.toml
crates/agentdash-agent-runtime-contract/: Cargo.toml
crates/agentdash-agent-runtime-contract/src/: agent_runtime_validators.ts  availability.rs  command.rs  context.rs  driver.rs  error.rs  event.rs  gateway.rs  generate.rs  hook_plan.rs  ids.rs  lib.rs  managed_projection.rs  presentation.rs  profile.rs  snapshot.rs  terminal_hook_effect.rs  wire_u64.rs
crates/agentdash-agent-runtime-host/: Cargo.toml
crates/agentdash-agent-runtime-host/src/: complete_agent.rs  complete_agent_callbacks.rs  complete_agent_repository.rs  conformance.rs  host.rs  lib.rs  live_catalog.rs  memory.rs  model.rs  ports.rs  registry.rs  runtime_hook_handler.rs  runtime_tool_handler.rs  verification.rs
crates/agentdash-agent-runtime-host/tests/: complete_agent_target.rs  host_behavior.rs
crates/agentdash-agent-runtime-test-support/: Cargo.toml  build.rs
crates/agentdash-agent-runtime-test-support/src/: lib.rs  session_parity.rs  tests.rs  trace_validator.rs
crates/agentdash-agent-runtime-wire/: Cargo.toml
crates/agentdash-agent-runtime-wire/src/: complete_agent.rs  generate.rs  lib.rs  placement.rs  runtime_wire_codecs.ts  wire_u64.rs
crates/agentdash-agent-runtime/fixtures/: main-mcp-tool-lifecycle.json
crates/agentdash-agent-runtime/src/: agent_snapshot_projection.rs  complete_agent_state.rs  complete_agent_surface.rs  context.rs  gateway.rs  hook.rs  lib.rs  lifecycle.rs  managed_runtime.rs  memory.rs  model.rs  platform_tool_broker.rs  ports.rs  surface.rs  tool_broker.rs
crates/agentdash-agent-runtime/tests/: business_surface.rs  context_compaction.rs  hook_orchestration.rs  runtime_interface.rs  tool_broker.rs
crates/agentdash-agent-service-api/: Cargo.toml
crates/agentdash-agent-service-api/src/: agent_service_codecs.ts  canonical_json.rs  command.rs  context.rs  generate.rs  ids.rs  lib.rs  live.rs  presentation.rs  profile.rs  service.rs  snapshot.rs  surface.rs  wire_u64.rs
crates/agentdash-agent-types/: Cargo.toml
crates/agentdash-agent-types/src/: content.rs  context.rs  decisions.rs  delegate.rs  hooks_io.rs  lib.rs  message.rs  projection.rs  protocol.rs  token_estimation.rs  tool.rs
crates/agentdash-agent/agent-design/: NOTES.md  PI_ALIGNMENT.md  RIG_SUBMODULE_PLAN.md  RUST_PI_HYBRID_DESIGN.md
crates/agentdash-agent/src/: agent.rs  agent_loop.rs  bridge.rs  conversation_naming.rs  convert.rs  event_stream.rs  lib.rs  tool_result_ref.rs  types.rs
crates/agentdash-agent/tests/: dash_core.rs  dash_history.rs  dash_service.rs  runtime_alignment.rs
crates/agentdash-api/: Cargo.toml  build.rs
crates/agentdash-api/src/: address_space_access.rs  agent_run_list_invalidation.rs  agent_run_mailbox.rs  agent_run_pending.rs  agent_run_runtime_surface.rs  agent_run_terminal_control.rs  app_state.rs  auth.rs  context.rs  execution_hooks.rs  integrations.rs  lib.rs  main.rs  oauth_flow.rs  operation_runtime.rs  plugins.rs  project_projection_notification.rs  routes.rs  rpc.rs  runtime_bridge.rs  session_construction.rs  session_context.rs  session_plan.rs  stream.rs  task_agent_context.rs  title_generator.rs  vfs_materialization.rs  vfs_surface_runtime.rs  workflow_runtime.rs  workspace_placement_runtime.rs  workspace_resolution.rs
crates/agentdash-api/tests/: agent_run_interaction_routes.rs  agent_runtime_target_projection.rs  product_control_plane_routes.rs
crates/agentdash-application/: Cargo.toml
crates/agentdash-application-agentrun/: Cargo.toml
crates/agentdash-application-agentrun/src/: agent_run_repository_set.rs  error.rs  lib.rs  runtime_task_tools.rs
crates/agentdash-application-agentrun/tests/: project_agent_start.rs  runtime_application_presentation.rs  runtime_facade.rs  runtime_mailbox.rs
crates/agentdash-application-hooks/: Cargo.toml
crates/agentdash-application-hooks/src/: active_workflow_contribution.rs  error.rs  helpers.rs  lib.rs  plan.rs  presets.rs  provider.rs  rules.rs  script_engine.rs  snapshot_helpers.rs  test_fixtures.rs  test_script_evaluator.rs
crates/agentdash-application-lifecycle/: Cargo.toml
crates/agentdash-application-lifecycle/src/: lib.rs  platform_config.rs  repository_set.rs  workflow_materialization.rs
crates/agentdash-application-operation-gateway/: Cargo.toml
crates/agentdash-application-ports/: Cargo.toml
crates/agentdash-application-ports/src/: accepted_turn_lifecycle.rs  agent_frame_hook_plan.rs  agent_frame_materialization.rs  agent_run_control_effect.rs  lib.rs  (+32 more)
crates/agentdash-application-runtime-gateway/: Cargo.toml
crates/agentdash-application-runtime-session/: Cargo.toml
crates/agentdash-application-shared-library/: Cargo.toml
crates/agentdash-application-skill/: Cargo.toml
crates/agentdash-application-vfs/: Cargo.toml
crates/agentdash-application-workflow/: Cargo.toml
crates/agentdash-connector-contract/: Cargo.toml
crates/agentdash-contracts/: Cargo.toml
crates/agentdash-coordinator/: Cargo.toml
crates/agentdash-diagnostics/: Cargo.toml
(+6966 files in other folders)
