[workspace]
resolver = "3"
members = [
    "crates/agentdash-domain",
    "crates/agentdash-application",
    "crates/agentdash-infrastructure",
    "crates/agentdash-spi",
    "crates/agentdash-executor",
    "crates/agentdash-first-party-plugins",
    "crates/agentdash-plugin-api",
    "crates/agentdash-api",
    "crates/agentdash-acp-meta",
    "crates/agentdash-mcp",
    "crates/agentdash-agent-types",
    "crates/agentdash-agent",
    "crates/agentdash-relay",
    "crates/agentdash-local",
    "crates/agentdash-protocol",
]


[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# Web 框架
axum = { version = "0.8", features = ["macros", "ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
schemars = { version = "1.0", features = ["uuid1", "chrono04"] }

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "sqlite", "chrono", "uuid"] }
postgresql_embedded = "0.20"

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# 正则表达式
regex = "1"

# 通用
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"

# 嵌入式脚本引擎
rhai = { version = "1.24", features = ["serde", "sync"] }

# 工作区内部 crate 互相引用
agentdash-domain = { path = "crates/agentdash-domain" }
agentdash-application = { path = "crates/agentdash-application" }
agentdash-infrastructure = { path = "crates/agentdash-infrastructure" }
agentdash-spi = { path = "crates/agentdash-spi" }
agentdash-executor = { path = "crates/agentdash-executor", default-features = false }
agentdash-first-party-plugins = { path = "crates/agentdash-first-party-plugins" }
agentdash-acp-meta = { path = "crates/agentdash-acp-meta" }
agentdash-mcp = { path = "crates/agentdash-mcp" }
agentdash-agent-types = { path = "crates/agentdash-agent-types" }
agentdash-agent = { path = "crates/agentdash-agent" }
agentdash-relay = { path = "crates/agentdash-relay" }
agentdash-local = { path = "crates/agentdash-local" }
agentdash-plugin-api = { path = "crates/agentdash-plugin-api" }

# Codex App Server Protocol
codex-app-server-protocol = { git = "https://github.com/openai/codex.git", tag = "rust-v0.121.0", package = "codex-app-server-protocol" }

# 平台内部协议
agentdash-protocol = { path = "crates/agentdash-protocol" }

# ACP 协议 (官方 SDK)
agent-client-protocol = { version = "0.10.2", features = ["unstable"] }
ts-rs = { version = "11.1", features = ["serde-json-impl", "no-serde-warnings", "chrono-impl"] }

# vibe-kanban (git dep, tracks default branch)
executors = { git = "https://github.com/BloopAI/vibe-kanban.git", package = "executors" }

[patch.crates-io]
# vibe-kanban 的 executors → codex-core 依赖 tokio-tungstenite/proxy feature，
# crates.io 版本不提供该 feature，需用 OpenAI 的维护分支替换。
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
