[workspace]
resolver = "3"
members = [
    "crates/agentdash-domain",
    "crates/agentdash-application-ports",
    "crates/agentdash-application",
    "crates/agentdash-infrastructure",
    "crates/agentdash-spi",
    "crates/agentdash-executor",
    "crates/agentdash-first-party-integrations",
    "crates/agentdash-integration-api",
    "crates/agentdash-contracts",
    "crates/agentdash-api",

    "crates/agentdash-mcp",
    "crates/agentdash-agent-types",
    "crates/agentdash-agent",
    "crates/agentdash-relay",
    "crates/agentdash-local",
    "crates/agentdash-local-tauri",
    "crates/agentdash-agent-protocol",
]


[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# Web 框架
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
schemars = { version = "1.0", features = ["uuid1", "chrono04"] }

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "sqlite", "chrono", "uuid", "json"] }
postgresql_embedded = "0.20"

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# 正则表达式
regex = "1"

# 通用
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
zip = "2.4"
flate2 = "1.1.9"
tar = "0.4.45"

# 嵌入式脚本引擎
rhai = { version = "1.24", features = ["serde", "sync"] }

# 工作区内部 crate 互相引用
agentdash-domain = { path = "crates/agentdash-domain" }
agentdash-application-ports = { path = "crates/agentdash-application-ports" }
agentdash-application = { path = "crates/agentdash-application" }
agentdash-infrastructure = { path = "crates/agentdash-infrastructure" }
agentdash-spi = { path = "crates/agentdash-spi" }
agentdash-executor = { path = "crates/agentdash-executor", default-features = false }
agentdash-first-party-integrations = { path = "crates/agentdash-first-party-integrations" }

agentdash-mcp = { path = "crates/agentdash-mcp" }
agentdash-agent-types = { path = "crates/agentdash-agent-types" }
agentdash-agent = { path = "crates/agentdash-agent" }
agentdash-relay = { path = "crates/agentdash-relay" }
agentdash-local = { path = "crates/agentdash-local" }
agentdash-integration-api = { path = "crates/agentdash-integration-api" }
agentdash-contracts = { path = "crates/agentdash-contracts" }

# Codex App Server Protocol
codex-app-server-protocol = { git = "https://github.com/openai/codex.git", tag = "rust-v0.133.0", package = "codex-app-server-protocol" }

# Agent 事件流传输协议
agentdash-agent-protocol = { path = "crates/agentdash-agent-protocol" }

# ACP 协议 (官方 SDK)
agent-client-protocol = { version = "0.10.2", features = ["unstable"] }
ts-rs = { version = "11.1", features = ["serde-json-impl", "no-serde-warnings", "chrono-impl"] }
