[workspace]
resolver = "3"
members = [
    "crates/agentdash-agent-runtime",
    "crates/agentdash-agent-runtime-host",
    "crates/agentdash-agent-runtime-contract",
    "crates/agentdash-agent-runtime-wire",
    "crates/agentdash-agent-runtime-test-support",
    "crates/agentdash-domain",
    "crates/agentdash-application-ports",
    "crates/agentdash-application-runtime-gateway",
    "crates/agentdash-application-runtime-session",
    "crates/agentdash-application-vfs",
    "crates/agentdash-application-skill",
    "crates/agentdash-application-agentrun",
    "crates/agentdash-application-lifecycle",
    "crates/agentdash-application-workflow",
    "crates/agentdash-application-hooks",
    "crates/agentdash-application-shared-library",
    "crates/agentdash-diagnostics",
    "crates/agentdash-test-support",
    "crates/agentdash-process",
    "crates/agentdash-workspace-module",
    "crates/agentdash-application",
    "crates/agentdash-infrastructure",
    "crates/agentdash-spi",
    "crates/agentdash-executor",
    "crates/agentdash-first-party-integrations",
    "crates/agentdash-integration-api",
    "crates/agentdash-contracts",
    "crates/agentdash-api",

    "crates/agentdash-mcp",
    "crates/agentdash-agent-types",
    "crates/agentdash-agent",
    "crates/agentdash-relay",
    "crates/agentdash-local",
    "crates/agentdash-local-tauri",
    "crates/agentdash-agent-protocol",
]
[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# Web 框架
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
schemars = { version = "1.0", features = ["uuid1", "chrono04"] }

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "sqlite", "chrono", "uuid", "json"] }
postgresql_embedded = "0.20"

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# 正则表达式
regex = "1"
shell-words = "1.1.1"

# 通用
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
zip = "2.4"
flate2 = "1.1.9"
tar = "0.4.45"
base64 = "0.22"
sha2 = "0.10"
json-patch = "2.0"
globset = "0.4"
tempfile = "3.18"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
rmcp = "1.7"

# 嵌入式脚本引擎
rhai = { version = "1.24", features = ["serde", "sync"] }

# 工作区内部 crate 互相引用
agentdash-domain = { path = "crates/agentdash-domain" }
agentdash-agent-runtime = { path = "crates/agentdash-agent-runtime" }
agentdash-agent-runtime-host = { path = "crates/agentdash-agent-runtime-host" }
agentdash-agent-runtime-contract = { path = "crates/agentdash-agent-runtime-contract" }
agentdash-agent-runtime-wire = { path = "crates/agentdash-agent-runtime-wire" }
agentdash-agent-runtime-test-support = { path = "crates/agentdash-agent-runtime-test-support" }
agentdash-application-ports = { path = "crates/agentdash-application-ports" }
agentdash-application-runtime-gateway = { path = "crates/agentdash-application-runtime-gateway" }
agentdash-application-runtime-session = { path = "crates/agentdash-application-runtime-session" }
agentdash-application-vfs = { path = "crates/agentdash-application-vfs" }
agentdash-application-skill = { path = "crates/agentdash-application-skill" }
agentdash-application-agentrun = { path = "crates/agentdash-application-agentrun" }
agentdash-application-lifecycle = { path = "crates/agentdash-application-lifecycle" }
agentdash-application-workflow = { path = "crates/agentdash-application-workflow" }
agentdash-application-hooks = { path = "crates/agentdash-application-hooks" }
agentdash-application-shared-library = { path = "crates/agentdash-application-shared-library" }
agentdash-diagnostics = { path = "crates/agentdash-diagnostics" }
agentdash-test-support = { path = "crates/agentdash-test-support" }
agentdash-process = { path = "crates/agentdash-process" }
agentdash-workspace-module = { path = "crates/agentdash-workspace-module" }
agentdash-application = { path = "crates/agentdash-application" }
agentdash-infrastructure = { path = "crates/agentdash-infrastructure" }
agentdash-spi = { path = "crates/agentdash-spi" }
agentdash-executor = { path = "crates/agentdash-executor", default-features = false }
agentdash-first-party-integrations = { path = "crates/agentdash-first-party-integrations" }

agentdash-mcp = { path = "crates/agentdash-mcp" }
agentdash-agent-types = { path = "crates/agentdash-agent-types" }
agentdash-agent = { path = "crates/agentdash-agent" }
agentdash-relay = { path = "crates/agentdash-relay" }
agentdash-local = { path = "crates/agentdash-local", default-features = false }
agentdash-integration-api = { path = "crates/agentdash-integration-api" }
agentdash-contracts = { path = "crates/agentdash-contracts" }

# Codex Rust crates
codex-app-server-protocol = { git = "https://github.com/openai/codex.git", tag = "rust-v0.140.0", package = "codex-app-server-protocol" }
codex-utils-pty = { git = "https://github.com/openai/codex.git", tag = "rust-v0.140.0", package = "codex-utils-pty" }
codex-utils-output-truncation = { git = "https://github.com/openai/codex.git", tag = "rust-v0.140.0", package = "codex-utils-output-truncation" }

# Agent 事件流传输协议
agentdash-agent-protocol = { path = "crates/agentdash-agent-protocol" }

# ACP 协议 (官方 SDK)
agent-client-protocol = { version = "0.10.2", features = ["unstable"] }
ts-rs = { version = "11.1", features = ["serde-json-impl", "no-serde-warnings", "chrono-impl"] }

[profile.dev.package."*"]
debug = 0

[profile.dev.build-override]
debug = 0

[profile.test.package."*"]
debug = 0

[profile.test.build-override]
debug = 0
