[package]
name = "agentdash-acp-meta"
description = "AgentDash ACP _meta schema (shared Rust/TS)"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "generate_agentdash_acp_meta_ts"
path = "src/generate_ts.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
agent-client-protocol = { workspace = true }
ts-rs = { version = "11.1", features = ["serde-json-impl", "no-serde-warnings"] }
