[package]
name = "agentdash-agent-protocol-codegen"
description = "Pinned Codex protocol generator for AgentDash-owned conversation contracts"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
codex-app-server-protocol = { workspace = true }
schemars08 = { package = "schemars", version = "0.8.22" }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
typify = { workspace = true }
