[package]
name = "agentdash-agent-protocol"
description = "AgentDash Agent 事件流传输协议 — BackboneEvent / BackboneEnvelope"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "generate_backbone_protocol_ts"
path = "src/generate_ts.rs"

[dependencies]
codex-app-server-protocol = { workspace = true }
agentdash-agent-types = { workspace = true }
agent-client-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ts-rs = { workspace = true }
thiserror = { workspace = true }
tempfile = "3"
