[package]
name = "agentdash-agent-protocol"
description = "AgentDash Agent 事件流传输协议 — BackboneEvent / BackboneEnvelope"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
codex-app-server-protocol = { workspace = true }
agentdash-agent-types = { workspace = true }
agent-client-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ts-rs = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22"
agentdash-diagnostics = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.18"
