[package]
name = "agentdash-agent-protocol"
description = "AgentDash Agent 事件流传输协议 — BackboneEvent / BackboneEnvelope"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ts-rs = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.18"
