[package]
name = "agentdash-agent-runtime-contract"
description = "AgentDash-owned canonical Agent Runtime vocabulary and driver contract"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "generate_agent_runtime_contracts"
path = "src/generate.rs"

[dependencies]
async-trait = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ts-rs = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
