[package]
name = "agentdash-agent-runtime-host"
description = "Complete Agent Host for durable service, placement, binding, effect, and lease coordination"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
agentdash-agent-runtime = { workspace = true }
agentdash-agent-runtime-contract = { workspace = true }
agentdash-agent-service-api = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
