[package]
name = "agentdash-agent-runtime-test-support"
description = "Shared behavioral conformance harness for AgentDash Agent Runtime drivers"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
agentdash-agent-runtime-contract = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
