[package]
name = "agentdash-agent-runtime-test-support"
description = "Shared presentation parity checks for AgentDash Product surfaces"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
