[package]
name = "agentdash-agent-runtime"
description = "Managed Agent Runtime state kernel and persistence ports"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
agentdash-agent-service-api = { workspace = true }
agentdash-agent-runtime-contract = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
