[package]
name = "agentdash-agent-runtime"
description = "In-memory Agent coordination and authoritative snapshot projection"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
agentdash-agent-service-api = { workspace = true }
agentdash-agent-runtime-contract = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
