[package]
name = "agentdash-agent-service-api"
description = "AgentDash-owned Complete Agent Service contract"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
ts-rs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
