[package]
name = "agentdash-agent-service-api"
description = "AgentDash-owned Complete Agent Service contract"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "generate_agent_service_api"
path = "src/generate.rs"

[dependencies]
agentdash-agent-protocol = { workspace = true }
async-trait = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
ts-rs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
