[package]
name = "agentdash-agent"
description = "Pi Agent 框架 — 基于 Rig 的 Agent Runtime SDK"
version.workspace = true
edition.workspace = true

[dependencies]
# 跨层工具合同（AgentTool SPI）
agentdash-spi = { workspace = true }

# Rig 核心（LLM 能力层）
rig-core = { workspace = true }

# 异步运行时
tokio = { workspace = true }
futures = { workspace = true }
async-trait = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# 日志
tracing = { workspace = true }

# 通用
uuid = { workspace = true }
schemars = { workspace = true }
walkdir = "2.5"
regex = "1.11"
globset = "0.4"
jsonschema = "0.30"

[dev-dependencies]
tempfile = "3.18"
