[package]
name = "agentdash-agent"
description = "Dash Agent 的 history、lifecycle、fork 与 compaction 中层"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentdash-agent-core = { workspace = true }
agentdash-agent-protocol = { workspace = true }
agentdash-diagnostics = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
jsonschema = "0.30"
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { workspace = true }
