[package]
name = "agentdash-api"
description = "AgentDash API 服务 — RPC 路由、NDJSON 流式推送与 Resume 机制"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agentdash-server"
path = "src/main.rs"

[lib]
name = "agentdash_api"
path = "src/lib.rs"

[dependencies]
agentdash-domain = { workspace = true }
agentdash-spi = { workspace = true }
agentdash-application = { workspace = true }
agentdash-infrastructure = { workspace = true }
agentdash-executor = { workspace = true, features = ["pi-agent"] }
agentdash-mcp = { workspace = true }
agentdash-relay = { workspace = true }
agentdash-plugin-api = { workspace = true }
agentdash-first-party-plugins = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["io", "rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
walkdir = "2.5"
executors = { workspace = true }
schemars = { workspace = true }
bcrypt = "0.16"

# Agent 类型（RuntimeToolProvider 使用 AgentTool trait）
agentdash-agent = { workspace = true }

# ACP 协议（仅用于路由层的类型引用）
agent-client-protocol = { workspace = true }
agentdash-protocol = { workspace = true }
json-patch = "2.0"
regex.workspace = true
postgresql_embedded = { workspace = true }
