[package]
name = "agentdash-api"
description = "AgentDash API 服务 — RPC 路由、NDJSON 流式推送与 Resume 机制"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agentdash-server"
path = "src/main.rs"

[lib]
name = "agentdash_api"
path = "src/lib.rs"

[dependencies]
agentdash-domain = { workspace = true }
agentdash-workspace-module = { workspace = true }
agentdash-contracts = { workspace = true }
agentdash-platform-spi = { workspace = true }
agentdash-application-ports = { workspace = true }
agentdash-application-extension-gateway = { workspace = true }
agentdash-application-vfs = { workspace = true }
agentdash-application-agentrun = { workspace = true }
agentdash-application-lifecycle = { workspace = true }
agentdash-application-workflow = { workspace = true }
agentdash-application-shared-library = { workspace = true }
agentdash-application = { workspace = true }
agentdash-infrastructure = { workspace = true }
agentdash-llm-provider = { workspace = true }
agentdash-mcp = { workspace = true }
agentdash-relay = { workspace = true }
agentdash-integration-api = { workspace = true }
agentdash-integration-codex = { workspace = true }
agentdash-agent-service-api = { workspace = true }
agentdash-agent-runtime-host = { workspace = true }
agentdash-agent-runtime = { workspace = true }
agentdash-agent-runtime-contract = { workspace = true }
agentdash-agent-runtime-wire = { workspace = true }
agentdash-integration-native-agent = { workspace = true }
agentdash-integration-remote-runtime = { workspace = true }
agentdash-first-party-integrations = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
agentdash-diagnostics = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
zip = { workspace = true }
async-stream = "0.3"
async-trait = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
tokio-stream = { workspace = true }
walkdir = "2.5"
schemars = { workspace = true }
bcrypt = "0.16"
base64 = { workspace = true }
reqwest = { workspace = true, features = ["form", "json"] }
sha2 = { workspace = true }
url = "2.5"

json-patch = { workspace = true }
regex.workspace = true
postgresql_embedded = { workspace = true }

[dev-dependencies]
agentdash-agent = { workspace = true }
agentdash-agent-runtime-test-support = { workspace = true }
agentdash-test-support = { workspace = true }
agentdash-local = { workspace = true }
