[package]
name = "agentdash-application-agentrun"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentdash-agent-runtime-contract = { workspace = true }
agentdash-agent-protocol = { workspace = true }
agentdash-application-ports = { workspace = true }
agentdash-application-skill = { workspace = true }
agentdash-application-vfs = { workspace = true }
agentdash-application-workflow = { workspace = true }
agentdash-workspace-module = { workspace = true }
agentdash-contracts = { workspace = true }
agentdash-domain = { workspace = true }
agentdash-platform-spi = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
agentdash-diagnostics = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
agentdash-agent-service-api = { workspace = true }
agentdash-test-support = { workspace = true }
futures = { workspace = true }
json-patch = "2.0"
tempfile = "3.18"
tokio-stream = { version = "0.1", features = ["sync"] }
