[package]
name = "agentdash-application-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentdash-application-ports = { workspace = true }
agentdash-diagnostics = { workspace = true }
agentdash-domain = { workspace = true }
agentdash-spi = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
