[package]
name = "agentdash-application-lifecycle"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentdash-agent-protocol = { workspace = true }
agentdash-agent-runtime-contract = { workspace = true }
agentdash-agent = { workspace = true }
agentdash-application-agentrun = { workspace = true }
agentdash-application-ports = { workspace = true }
agentdash-application-vfs = { workspace = true }
agentdash-application-workflow = { workspace = true }
agentdash-domain = { workspace = true }
agentdash-workspace-module = { workspace = true }
agentdash-platform-spi = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
globset = "0.4"
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
agentdash-diagnostics = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
agentdash-application-skill = { workspace = true }
agentdash-test-support = { workspace = true }
